[tool.poetry]
name = "deep-learning"
version = "0.1.0"
description = ""
authors = ["rohan <rohanhavannavar@gmail.com>"]
readme = "README.md"
packages = [{include = "deep_learning", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
